# QRT-Challenge-2024

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: catboost_params.yaml  gnb_params.yaml  knn_params.yaml  lda_params.yaml  lgb_params.yaml  logreg_params.yaml  qda_params.yaml  rf_params.yaml  sgdc_params.yaml  tabnet_params.yaml  xgb_params.yaml  xt_params.yaml
docs/: mkdocs.yml
docs/docs/: index.md
match_forecast/: __init__.py  config.py  dataset.py  features.py  formatters.py  utils.py
match_forecast/modeling/: formatters.py  (+2 more)
notebooks/: 0.01-ma-benchmark-notebook.ipynb  0.02-ma-explore-team-dataset.ipynb  0.02-ma-explore-teams-dataset.ipynb  0.03-ma-explore-players-dataset.ipynb  0.03-ma-processing-players-dataset.ipynb  0.04-ma-explore-train-dataset.ipynb  0.04-ma-processing-train-dataset.ipynb  1.01-ma-modelling-logreg.ipynb  1.02-ma-modelling-xt.ipynb  1.03-ma-modelling-lgb.ipynb  1.04-ma-modelling-xgb.ipynb  1.05-ma-modelling-rf.ipynb  1.06-ma-modelling-catboost.ipynb  1.07-ma-modelling-sgdc.ipynb  1.07-ma-modelling-softvote.ipynb  1.07-ma-modelling-svm.ipynb  1.08-ma-modelling-gnb.ipynb  1.08-ma-modelling-svm.ipynb  1.09-ma-modelling-tabnet.ipynb  1.10-ma-modelling-knn.ipynb  1.11-ma-modelling-lda.ipynb  1.12-ma-modelling-qda.ipynb  2.01-ma-build-sub-dataset.ipynb  2.02-ma-sub-softvote.ipynb  catboost_model.json  gnb_model.json  knn_model.json  lda_model.json  lgb_model.json  logreg_model.json  opt_xt.json  rf_model.json  sgdc_model.json  svm_model.json  tabnet_model.json  xgb_model.json  xt_model.json
tests/: test_data.py
(+4 files in other folders)
