[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "match_forecast"
version = "0.0.1"
description = "Challenge match forecast"
authors = [
  { name = "michaelacn" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["match_forecast"]
include = ["pyproject.toml", "match_forecast/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["match_forecast"]
force-sort-within-sections = true

